# TX2_jetson_stats_monitor

./: CMakeLists.txt  LICENSE  README.md  example.cpp  jetson_stats.hpp
